# FeatureVerificatio

./: README.md
AOAVericatio/: main.cpp
AbstractFactoryVerificatio/: main.cpp
AdapterVerificatio/: main.cpp
AnonymousClassVerificatio/: main.cpp
AsyncQueueVerificatio/: main.cpp
BPlusTreeVerificatio/: main.cpp
BridgeVerificatio/: main.cpp
BuilderVerificatio/: main.cpp
CRCVerificatio/: main.cpp
ChainOfResponsibilityVerificatio/: main.cpp
ClusteringVlgorithmVerificatio/: AffinityPropagation.cpp  CURE.cpp  DBSCAN.cpp  GMM.cpp  Hierarchical.cpp  K-Means.cpp  MeanShift.cpp  OPTICS.cpp  SpectralClustering.cpp
CollectionVerificatio/: MultimapVerificatio.cpp
CommandVerificatio/: main.cpp
CompositeVerificatio/: main.cpp
ConstantVerificatio/: main.cpp
ContainerVerificatio/: BitsetVerificatio.cpp  Forward_listVerificatio.cpp  ListVerificatio.cpp  SetVerificatio.cpp  StackVerificatio.cpp  Unordered_mapVerificatio.cpp  VectorVerificatio.cpp
CosSimilarityVerificatio/: main.rs
DSTW-TOFVerificatio/: main.cpp
DecoratorVerificatio/: main.cpp
DequeVerificatio/: main.cpp
DictionaryVerificatio/: main.cpp
DynamicMemoryVerificatio/: main.cpp
EncodeVerificatio/: main.cpp
ExceptionHandlingVerificatio/: main.cpp
FFTVerificatio/: main.cpp
FacadeVerificatio/: main.cpp
FactoryMethodVerificatio/: main.cpp
FlyweightVerificatio/: main.cpp
FunctionVerificatio/: main.cpp
StrategyVerificatio2/: AdditionOperation.h  CMakeLists.txt  Calculator.h  DivisionOperation.h  MathOperation.h  MultiplicationOperation.h  SubtractionOperation.h  main.cpp
(+76 files in other folders)
